# RTBQSim

./: .gitignore  Dockerfile  readme.md  run_docker.sh
BQSim/: CMakeLists.txt  Dockerfile  LICENSE  README.md  bqsim.sh  bqsim_rt.sh  compile.sh  cuquantum_plus_bq.sh  docker_compile.sh  export_fused_gates.sh  flatdd.sh  overall.sh  qiskit-aer.sh  rt_compile.sh  verify.py
BQSim/apps/: BQSim.cu  CMakeLists.txt  FlatDD.cpp
BQSim/build-rt.old/apps/: BQSim
BQSim/circuits/: dnn_n17.qasm  dnn_n19.qasm  dnn_n21.qasm  graph_state_n16.qasm  graph_state_n18.qasm  graph_state_n22.qasm  graph_state_n24.qasm  random_n19.qasm  routing_n6.qasm  vqe_n12.qasm  vqe_n14.qasm  vqe_n16.qasm
BQSim/cuquantum_test/: CMakeLists.txt  README.md
BQSim/cuquantum_test/include/: base.hpp  naive_dmav.hpp
BQSim/cuquantum_test/qpp/include/qpp/classes/: qcircuit.hpp
BQSim/cuquantum_test/util/: util.hpp
BQSim/include/: CircuitOptimizer.hpp  FusedGate.hpp  GatePrimitive.hpp  QBatchSimulator.hpp  RTSpMSpMEngine.hpp  SwitchSimulator.hpp
BQSim/include/dd/: Package.hpp  SwitchPackage.hpp
BQSim/input_batch/: n10.txt  n14.txt  n2.txt  n4.txt  n5.txt
BQSim/qiskit_test/: qiskit_export_gate.py
BQSim/src/: CMakeLists.txt  CircuitOptimizer.cpp  SwitchSimulator.cpp
BQSim/src/rt_engine/: RTSpMSpMEngine.cu  optixSpMSpM.cu  optixSpMSpM.h
RTBQSim/: .gitignore  CMakeLists.txt  cuquantum.sh  cuquantum_compile.sh  qiskit.sh  qiskit_cuquantum.sh  qsim.sh  rt_bqsim.sh  rt_compile.sh  verify.py
RTBQSim/apps/: CMakeLists.txt  RTBQSim.cu  RTBQSimThreshold.cu
RTBQSim/circuits/: graph_state_n20.qasm  graph_state_n23.qasm  portfolio_vqe_n16.qasm  portfolio_vqe_n17.qasm  portfolio_vqe_n18.qasm  qaoa_n11.qasm  qaoa_n13.qasm  qaoa_n15.qasm  qft_n12.qasm  qft_n14.qasm  qft_n16.qasm  qft_n18.qasm  random_n20.qasm  random_n21.qasm  routing_n12.qasm  supremacy_n12.qasm  tsp_n16.qasm  tsp_n9.qasm
RTBQSim/circuits/threshold/: threshold_n16.qasm  threshold_n17.qasm  threshold_n18.qasm  threshold_n19.qasm  threshold_n20.qasm  threshold_n21.qasm  threshold_n22.qasm  threshold_n23.qasm
RTBQSim/cuquantum_test/: .gitignore  CMakeLists.txt  batch-scalability.sh  build.sh  main.cu  random_input_gen.py
RTBQSim/cuquantum_test/include/: base.hpp  cu_qbatch.hpp  naive.hpp
RTBQSim/include/: CuSparseSpGEMMEngine.hpp  CudaUtils.hpp  GateFusionPlanner.hpp  GatePrimitive.hpp  GatePrimitiveBuilder.hpp  QBatchSimulator.hpp  QuantumComputation.hpp  RTNumericPrecision.hpp  RTSpMSpMEngine.hpp
RTBQSim/input_batch/: n12.txt  n13.txt  n15.txt  n16.txt  n3.txt  n6.txt  n9.txt
RTBQSim/qiskit_test/: qiskit_export_gate.py  qiskit_test.py
RTBQSim/qsim_test/: qsim_test.py
RTBQSim/src/: CMakeLists.txt
RTBQSim/src/dd/: CMakeLists.txt
RTBQSim/src/parsers/: Parser.cpp  Scanner.cpp
RTBQSim/src/rt_engine/: CuSparseSpGEMMEngine.cu  RTSpMSpMEngine.cu  optixSpMSpM.cu  optixSpMSpM.h
RTSpMSpM/cuSparse/src/: main.cpp
RTSpMSpM/optixSpMSpM/src/optixSpMSpM/: optixSpMSpM.cpp
RTSpMSpM/scripts/: AE_test.py
